--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -125,9 +125,9 @@ env:
   FIRMWARE_AUTHOR: TurBoTse
   FIRMWARE_BRANCH: main
   FIRMWARE_REPO: padavan
-  FIRMWARE_URL: https://github.com/TurBoTse/padavan.git
+  FIRMWARE_URL: https://github.com/guzya007/padavan.git
   TOOLCHAIN_ROOT: toolchain/toolchain-mipsel
-  TOOLCHAIN_URL: https://github.com/TurBoTse/padavan/releases/download/toolchain
+  TOOLCHAIN_URL: https://github.com/guzya007/padavan/releases/download/toolchain
 jobs:
   build:
     runs-on: ubuntu-latest
