--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -108,7 +108,7 @@ on:
         description: 'String JSON list of Customization'
         required: true
         type: string
-        default: '{"lanip":"192.168.2.1","signaccount":"admin","signpassword":"admin","wifi2gssid":"Padavan","wifi2gpsk":"1234567890","wifi5gssid":"Padavan-5G","wifi5gpsk":"1234567890"}'
+        default: '{"lanip":"192.168.2.1","signaccount":"root","signpassword":"vadya007","wifi2gssid":"wrt","wifi2gpsk":"vadya007","wifi5gssid":"wrt5","wifi5gpsk":"vadya007"}'
       nanoversion:
         type: boolean
         description: 'Compile the nano version'
