--- a/.github/workflows/build_padavan.yml
+++ b/.github/workflows/build_padavan.yml
@@ -66,7 +66,7 @@ on:
           - ZTE-E8820S
           - ZTE-E8820V2
           - ZTT-RX6000
-        default: K2P
+        default: NEWIFI3
       toolchain:
         description: "Select compilation toolchain"
         required: true
@@ -87,12 +87,12 @@ on:
         description: 'Plugin JSON, e.g. {"ss":"y","xray":"n"}'
         required: true
         type: string
-        default: '{"shadowsocks":"y","v2ray":"n","xray":"y","trojan":"n","ssobfs":"y","smartdns":"y","vlmcsd":"y","ttyd":"n","iperf3":"n"}'
+        default: '{"shadowsocks":"n","v2ray":"n","xray":"n","trojan":"n","ssobfs":"n","smartdns":"n","vlmcsd":"n","ttyd":"n","iperf3":"n"}'
       customization:
         description: 'Customization JSON'
         required: true
         type: string
-        default: '{"lanip":"192.168.2.1","signaccount":"admin","signpassword":"admin","wifi2gssid":"Padavan","wifi2gpsk":"1234567890","wifi5gssid":"Padavan-5G","wifi5gpsk":"1234567890"}'
+        default: '{"lanip":"192.168.2.1","signaccount":"root","signpassword":"00","wifi2gssid":"wrt","wifi2gpsk":"vadya007","wifi5gssid":"wrt5","wifi5gpsk":"vadya007"}'
       nanoversion:
         description: "Build Nano Version"
         type: boolean
